feat: 거래소별 탐지 코인 웹소켄 구독 분리, 거래소 타입 컬럼명 Type 으로 변경